# thesisAutonomous_ws

./: .gitignore
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/pkgconfig/: amcl_pkg.pc  create_map.pc  gmapping.pc  kinematic.pc  launch_pkg.pc  robot_bringup.pc  robot_gui.pc  robot_navigation.pc  robot_pose_ekf.pc  robot_pose_publisher.pc  robot_simulate.pc  rplidar_ros.pc  teleop_keyboard.pc
devel/lib/robot_gui/: robot_gui_node
devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
src/amcl_pkg/: CMakeLists.txt  package.xml
src/create_map/: CMakeLists.txt
src/kinematic/: CMakeLists.txt
src/launch_pkg/: CMakeLists.txt
src/launch_pkg/config/: my_robot.lua  myrobot_rviz.rviz  param.yaml  param_board.yaml
src/launch_pkg/howtorun/: howtoLauch_Navigation.txt  howtoLauch_slamGmapping.txt  howtoTest_odom.txt
src/launch_pkg/launch/: firstWork.launch  get_map.launch  launchAll.launch  my_robot_cartographer.launch  robot_tfstatic.launch  robotpose_ekf.launch  rviz_navigation.launch  rvizslam.launch  testCircuit.launch  testRun.launch
src/launch_pkg/msg/: Control_cpd.msg  Control_hc.msg  Control_main.msg  Control_oc.msg  Control_rtc.msg  Status_cpd.msg  Status_hc.msg  Status_main.msg  Status_oc.msg  Status_rtc.msg
src/launch_pkg/scripts/: convert_ROS_CAN.py  firstWork.py  get_map.py  launchAll.py  robot_pose.py
src/robot_pose_ekf/: robot_pose_ekf.launch
src/rplidar_ros/: README.md
src/teleop_keyboard/: CMakeLists.txt  README.md  package.xml
(+36 files in other folders)
